
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAXX (int ,int ) ;
 char* Malloc (int) ;
 int atoi (char*) ;
 int free (char*) ;
 int printf (char*,char*) ;
 char* read_sock (int) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 int write_sock (int,char*) ;

int ftp_login(int sock, char *username, char *password)
{
    char *recvbuf;
    char *sendbuf;
    char *header;

    header = read_sock(sock);
    printf("\tserver runs:\t%s", header);
    free(header);

    sendbuf = Malloc((MAXX(strlen(username), strlen(password)) + 7) *
       sizeof(char));

    sprintf(sendbuf, "USER %s\n", username);

    write_sock(sock, sendbuf);
    recvbuf = read_sock(sock);

    if(atoi(recvbuf) != 331)
    {
 free(recvbuf);
 return 0;
    }

    sprintf(sendbuf, "PASS %s\n", password);
    write_sock(sock, sendbuf);
    recvbuf = read_sock(sock);

    if(atoi(recvbuf) != 230)
    {
 free(recvbuf);
 return 0;
    }

    free(sendbuf);
    return 1;

}
